--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fsi/admin-bundle" : "1.0.*",
         "symfony/framework-bundle": "~2.3",
         "symfony/security-bundle": "~2.3",
+        "symfony/validator": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "friendsofsymfony/user-bundle": "1.3.*"
     },
