--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -18,3 +18,4 @@ default:
                 path: features/fixtures/project/app/AppKernel.php
                 bootstrap: features/fixtures/project/app/bootstrap.php
         SensioLabs\Behat\PageObjectExtension\Extension: ~
+        PSS\Behat\Symfony2MockerExtension\Extension: ~
