--- a/features/fixtures/project/app/config/security.yml
+++ b/features/fixtures/project/app/config/security.yml
@@ -1,12 +1,10 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        FOS\UserBundle\Model\UserInterface: sha512
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    admin: { password: admin, roles: [ 'ROLE_ADMIN' ] }
+        fos_userbundle:
+            id: fos_user.user_provider.username
 
     firewalls:
         dev:
@@ -16,10 +14,11 @@ security:
         admin_panel:
             pattern:    ^/admin
             form_login:
-                check_path: admin_security_user_check
-                login_path: admin_security_user_login
+                provider: fos_userbundle
+                check_path: fsi_admin_security_user_check
+                login_path: fsi_admin_security_user_login
             logout:
-                path:   admin_security_user_logout
+                path:   fsi_admin_security_user_logout
             anonymous:    ~
 
     access_control:
