--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "symfony/swiftmailer-bundle": "~2.3"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "1.2.*@dev",
+        "doctrine/doctrine-bundle": "dev-master",
+        "doctrine/doctrine-cache-bundle": "dev-master",
         "symfony/expression-language": "~2.4",
         "friendsofsymfony/user-bundle": "1.3.*",
         "phpspec/phpspec": "2.0.*@dev",
