--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "fsi/admin-bundle" : "1.0.*",
+        "fsi/admin-bundle" : "dev-master",
         "symfony/framework-bundle": "~2.3",
         "symfony/security-bundle": "~2.3",
         "symfony/validator": "~2.3",
