--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,12 @@
         "symfony/expression-language": "~2.4",
         "friendsofsymfony/user-bundle": "1.3.*",
         "phpspec/phpspec": "2.0.*@dev",
-        "behat/behat": "2.4.*",
-        "behat/symfony2-extension": "*@stable",
+        "behat/behat": "2.5.*@stable",
+        "behat/symfony2-extension": "1.1.*@stable",
+        "behat/mink": "1.5.*@stable",
         "behat/mink-extension": "*",
         "behat/mink-browserkit-driver": "*",
-        "sensiolabs/behat-page-object-extension": "1.0.*@dev",
+        "sensiolabs/behat-page-object-extension": "1.0.*",
         "bossa/phpspec2-expect": "dev-master"
     },
     "config": {
