--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "fsi/admin-bundle" : "1.0.*",
+        "fsi/admin-bundle" : "~1.1@dev",
         "symfony/framework-bundle": "~2.3",
         "symfony/security-bundle": "~2.3",
         "symfony/validator": "~2.3",
@@ -42,7 +42,7 @@
     "target-dir" : "FSi/Bundle/AdminSecurityBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.1-dev"
         }
     }
 }
