--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "behat/mink-extension": "~2.0",
         "behat/mink-browserkit-driver": "~1.2",
         "sensiolabs/behat-page-object-extension": "~2.0@dev",
-        "bossa/phpspec2-expect": "~1.0"
+        "bossa/phpspec2-expect": "~1.0",
+        "symfony/class-loader": "~2.3"
     },
     "config": {
         "bin-dir": "bin"
