--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
     - composer self-update
     - composer install -n --prefer-source
     - ./bin/phpspec run -f pretty
-    - ./bin/behat --no-snippets --no-paths --verbose --format=progress
+    - ./bin/behat --no-snippets --verbose --format=progress
