--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,17 @@
         "symfony/swiftmailer-bundle": "~2.3"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "dev-master",
+        "doctrine/doctrine-bundle": "~1.5",
         "symfony/expression-language": "~2.4",
         "friendsofsymfony/user-bundle": "1.3.*",
-        "phpspec/phpspec": "2.0.*@dev",
-        "behat/behat": "2.5.*@stable",
-        "behat/symfony2-extension": "1.1.*@stable",
-        "behat/mink": "1.5.*@stable",
-        "behat/mink-extension": "*",
-        "behat/mink-browserkit-driver": "*",
-        "sensiolabs/behat-page-object-extension": "1.0.*",
-        "bossa/phpspec2-expect": "dev-master"
+        "phpspec/phpspec": "~2.2",
+        "behat/behat": "~3.0",
+        "behat/symfony2-extension": "~2.0",
+        "behat/mink": "~1.6",
+        "behat/mink-extension": "~2.0",
+        "behat/mink-browserkit-driver": "~1.2",
+        "sensiolabs/behat-page-object-extension": "~2.0@dev",
+        "bossa/phpspec2-expect": "~1.0"
     },
     "config": {
         "bin-dir": "bin"
