--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,30 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - hhvm
 
-before_install:
-    - sudo apt-get update > /dev/null
+env:
+  - SYMFONY_VERSION=2.6.*
+  - SYMFONY_VERSION=2.7.*
+  - SYMFONY_VERSION=2.8.*@dev
+  - SYMFONY_VERSION=dev-master
+
+sudo: false
+
+matrix:
+  allow_failures:
+    - env: SYMFONY_VERSION=dev-master
+    - php: 7.0
+    - php: hhvm
+  exclude:
+    - env: SYMFONY_VERSION=dev-master
+      php: 5.4
 
 install:
-    - sudo apt-get install -y --force-yes php5-sqlite
-
-script:
     - composer self-update
     - composer install -n --prefer-source
-    - ./bin/phpspec run -f pretty
-    - ./bin/behat --no-snippets --verbose --format=progress
+
+script:
+    - bin/phpspec run -f pretty
+    - bin/behat --no-snippets --verbose --format=progress
