--- a/behat.yml
+++ b/behat.yml
@@ -3,7 +3,7 @@ default:
         default:
             contexts:
                 - FSi\Bundle\AdminSecurityBundle\Behat\Context\AdminUserContext
-                - FSi\Bundle\AdminSecurityBundle\Behat\Context\MailContext:
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\MailContext
                 - FSi\Bundle\AdminSecurityBundle\Behat\Context\PasswordResetContext
     extensions:
         Behat\MinkExtension:
