--- a/features/fixtures/project/app/config/security.yml
+++ b/features/fixtures/project/app/config/security.yml
@@ -1,10 +1,12 @@
 security:
     encoders:
-        FOS\UserBundle\Model\UserInterface: sha512
+        FSi\Bundle\AdminSecurityBundle\Security\User\UserInterface: sha512
 
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username
+        entity_provider:
+            entity:
+                class: FSiFixturesBundle:User
+                property: username
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_REDACTOR
@@ -17,7 +19,7 @@ security:
         admin_panel:
             pattern:    ^/admin
             form_login:
-                provider: fos_userbundle
+                provider: entity_provider
                 check_path: fsi_admin_security_user_check
                 login_path: fsi_admin_security_user_login
             logout:
