--- a/features/fixtures/project/app/config/routing.yml
+++ b/features/fixtures/project/app/config/routing.yml
@@ -6,6 +6,10 @@ admin_security:
       resource: "@FSiAdminSecurityBundle/Resources/config/routing/admin_security.yml"
       prefix: /admin
 
+admin_activation:
+      resource: "@FSiAdminSecurityBundle/Resources/config/routing/admin_activation.yml"
+      prefix: /admin
+
 admin_password_reset:
     resource: "@FSiAdminSecurityBundle/Resources/config/routing/admin_password_reset.yml"
     prefix: /admin
