--- a/behat.yml
+++ b/behat.yml
@@ -1,10 +1,29 @@
 default:
     suites:
-        default:
+        admin:
+            paths: [ %paths.base%/features/admin ]
             contexts:
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\DataContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\AdminContext
                 - FSi\Bundle\AdminSecurityBundle\Behat\Context\AdminUserContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\PasswordResetContext
+        password_reset:
+            paths: [ %paths.base%/features/password_reset ]
+            contexts:
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\AdminContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\AdminUserContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\DataContext
                 - FSi\Bundle\AdminSecurityBundle\Behat\Context\MailContext
                 - FSi\Bundle\AdminSecurityBundle\Behat\Context\PasswordResetContext
+        activation:
+            paths: [ %paths.base%/features/activation ]
+            contexts:
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\DataContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\AdminContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\AdminUserContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\MailContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\CommandContext
+                - FSi\Bundle\AdminSecurityBundle\Behat\Context\ActivationContext
     extensions:
         Behat\MinkExtension:
             base_url: http://localhost
