--- a/features/fixtures/project/app/config/config.yml
+++ b/features/fixtures/project/app/config/config.yml
@@ -30,16 +30,16 @@ doctrine:
 fsi_admin_security:
     driver: orm
     firewall_name: admin_panel
+    mailer:
+        reply_to: do-not-reply@example.com
     model:
         user: FSi\FixturesBundle\Entity\User
     activation:
         mailer:
             from: activation@fsi.pl
-            replay_to: do-not-reply@example.com
     password_reset:
         mailer:
             from: from-admin@fsi.pl
-            replay_to: office@example.com
     templates:
         password_reset:
             request: ::request.html.twig
