Bring back previous namespace structure. Check if extension present.

--- a/features/fixtures/project/app/config/security.yml
+++ b/features/fixtures/project/app/config/security.yml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        FSi\Bundle\AdminSecurityBundle\Security\Model\UserInterface: sha512
+        FSi\Bundle\AdminSecurityBundle\Security\User\UserInterface: sha512
 
     providers:
         entity_provider:
