--- a/features/fixtures/project/app/config/config.yml
+++ b/features/fixtures/project/app/config/config.yml
@@ -54,3 +54,12 @@ twig:
 swiftmailer:
     spool:
         type: file
+
+monolog:
+    handlers:
+        main:
+            type:   stream
+            path:   "%kernel.logs_dir%/%kernel.environment%.log"
+            level:  debug
+        console:
+            type:   console
