--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ php:
   - 7.0
   - hhvm
 
+cache:
+  directories:
+    - vendor
+    - bin
+
 env:
   - SYMFONY_VERSION=2.6.*
   - SYMFONY_VERSION=2.7.*
@@ -24,8 +29,21 @@ matrix:
       php: 5.4
 
 install:
-    - composer require symfony/symfony:${SYMFONY_VERSION} -n --prefer-source
+  - "[ ! -f bin/selenium.jar ] && wget -O bin/selenium.jar http://selenium-release.storage.googleapis.com/2.42/selenium-server-standalone-2.42.2.jar || true"
+  - composer require symfony/symfony:${SYMFONY_VERSION} -n --prefer-source
+  - php features/fixtures/project/app/console assets:install --symlink features/fixtures/project/web
+
+before_script:
+  - nohup php -S localhost:8080 -t features/fixtures/project/web > /tmp/server.log 2>&1 &
+  - sh -e /etc/init.d/xvfb start
+  - export DISPLAY=:99.0
+  - java -jar bin/selenium.jar > /dev/null &
+  - sleep 5
 
 script:
-    - bin/phpspec run -f pretty
-    - bin/behat --no-snippets --verbose --format=progress
+  - bin/phpspec run -f pretty
+  - bin/behat --no-snippets --format=progress --profile=travis -vvv features/admin/user_managment.feature
+
+after_failure:
+  - cat /tmp/FSiAdminSecurityBundle/logs/test.log
+  - cat /tmp/server.log
