--- a/Resources/config/datagrid/admin_security_user.yml
+++ b/Resources/config/datagrid/admin_security_user.yml
@@ -35,6 +35,7 @@ columns:
   batch:
     type: batch
     options:
+      translation_domain: FSiAdminSecurity
       actions:
         delete:
           label: admin.user_list.batch_action.delete
