--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
 
 install:
   - "[ ! -f bin/selenium.jar ] && wget -O bin/selenium.jar http://selenium-release.storage.googleapis.com/2.42/selenium-server-standalone-2.42.2.jar || true"
-  - composer require symfony/symfony:${SYMFONY_VERSION} -n --prefer-source
+  - composer require symfony/security-bundle:${SYMFONY_VERSION} -n --prefer-source
   - php features/fixtures/project/app/console assets:install --symlink features/fixtures/project/web
 
 before_script:
