--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,34 @@
 language: php
 
-php:
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - hhvm
-
-env:
-  - SYMFONY_VERSION=2.6.*
-  - SYMFONY_VERSION=2.7.*
-  - SYMFONY_VERSION=2.8.*@dev
-  - SYMFONY_VERSION=dev-master
-
 sudo: false
 
-matrix:
-  allow_failures:
-    - env: SYMFONY_VERSION=dev-master
-    - php: hhvm
-  exclude:
-    - env: SYMFONY_VERSION=dev-master
-      php: 5.4
+cache:
+    directories:
+        - $HOME/.composer/cache
 
-install:
-    - composer require symfony/symfony:${SYMFONY_VERSION} -n --prefer-source
+matrix:
+    include:
+        - php: 5.4
+          env:
+              - DEPENDENCIES='low'
+        - php: 5.5
+        - php: 5.6
+          env:
+              - SYMFONY_VERSION=2.6.*
+        - php: 5.6
+          env:
+              - SYMFONY_VERSION=2.7.*
+        - php: 5.6
+          env:
+              - SYMFONY_VERSION=2.8.*
+        - php: 7.0
+
+before_install:
+    - phpenv config-rm xdebug.ini
+    - composer self-update
+    - if [[ "$DEPENDENCIES" != "low" && ! $SYMFONY_VERSION ]]; then composer update --prefer-source; fi;
+    - if [[ "$DEPENDENCIES" != "low" && $SYMFONY_VERSION ]]; then composer require symfony/symfony:${SYMFONY_VERSION} -n --prefer-source; fi;
+    - if [[ "$DEPENDENCIES" == "low" ]]; then composer update --prefer-lowest --prefer-source; fi;
 
 script:
     - bin/phpspec run -f pretty
