--- a/Resources/config/routing/admin_password_reset.yml
+++ b/Resources/config/routing/admin_password_reset.yml
@@ -4,6 +4,6 @@ fsi_admin_security_password_reset_request:
         _controller: admin_security.controller.password_reset.request:requestAction
 
 fsi_admin_security_password_reset_change_password:
-    path: /password-reset/{token}
+    path: /password-reset/change-password/{token}
     defaults:
         _controller: admin_security.controller.password_reset.change_password:changePasswordAction
