--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "fsi/admin-bundle" : "~1.1@dev",
+        "fsi/admin-bundle" : "~2.0@dev",
         "symfony/form": "^2.4",
         "symfony/framework-bundle": "^2.3",
         "symfony/security": "^2.6",
@@ -47,7 +47,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev"
+            "1.1": "1.1-dev",
+            "dev-master": "2.0-dev"
         }
     }
 }
