--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "fsi/admin-security-bundle",
     "type": "symfony-bundle",
-    "description": "Purpose of this bundle is to provide simple authentication & authorization mechanisms for fsi/admin-bundle",
-    "keywords": ["admin", "panel", "symfony2", "bundle", "fsi"],
+    "description": "Simple authentication & authorization mechanisms for fsi/admin-bundle",
+    "keywords": ["admin", "panel", "symfony2", "bundle", "fsi", "security"],
     "license": "MIT",
     "authors": [
         {
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "fsi/admin-bundle" : "~2.0@dev",
+        "php": ">=5.4",
+        "fsi/admin-bundle" : "^2.0@dev",
         "symfony/form": "^2.4",
         "symfony/framework-bundle": "^2.3",
         "symfony/security": "^2.6",
@@ -25,19 +25,19 @@
         "paragonie/random_compat": "^1.1"
     },
     "require-dev": {
-        "symfony/expression-language": "^2.4",
-        "symfony/monolog-bundle": "^2.6",
+        "symfony/expression-language": "^2.8",
+        "symfony/monolog-bundle": "^2.12",
         "friendsofsymfony/user-bundle": "1.3.*",
-        "phpspec/phpspec": "^2.4",
-        "behat/behat": "^3.0.15",
+        "phpspec/phpspec": "^2.5",
+        "behat/behat": "^3.3",
         "behat/symfony2-extension": "^2.1",
         "behat/mink": "^1.7",
-        "behat/mink-extension": "^2.1",
+        "behat/mink-extension": "^2.2",
         "behat/mink-browserkit-driver": "^1.3",
-        "behat/mink-selenium2-driver": "^1.2",
-        "sensiolabs/behat-page-object-extension": "~2.0@dev",
+        "behat/mink-selenium2-driver": "^1.3",
+        "sensiolabs/behat-page-object-extension": "^2.0",
         "bossa/phpspec2-expect": "^1.0",
-        "symfony/class-loader": "^2.3"
+        "symfony/class-loader": "^2.8"
     },
     "config": {
         "bin-dir": "bin"
