--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,8 @@ matrix:
   include:
     - php: 5.4
       env:
-        - DEPENDENCIES='low'
+        - COMPOSER_FLAGS='--prefer-lowest'
     - php: 5.5
-    - php: 5.6
-      env:
-        - SYMFONY_VERSION=2.6.*
     - php: 5.6
       env:
         - SYMFONY_VERSION=2.7.*
@@ -27,11 +24,9 @@ matrix:
 before_install:
   - phpenv config-rm xdebug.ini
   - composer self-update
-  - if [[ "$DEPENDENCIES" != "low" && ! $SYMFONY_VERSION ]]; then composer update --prefer-source; fi;
-  - if [[ "$DEPENDENCIES" != "low" && $SYMFONY_VERSION ]]; then composer require symfony/symfony:${SYMFONY_VERSION} -n --prefer-source; fi;
-  - if [[ "$DEPENDENCIES" == "low" ]]; then composer update --prefer-lowest --prefer-source; fi;
+  - if [[ $SYMFONY_VERSION ]]; then composer require symfony/symfony:${SYMFONY_VERSION} -n --no-update; fi;
   - "[ ! -f bin/selenium.jar ] && wget -O bin/selenium.jar http://selenium-release.storage.googleapis.com/2.48/selenium-server-standalone-2.48.2.jar || true"
-  - php features/fixtures/project/app/console assets:install --symlink features/fixtures/project/web
+  - composer update $COMPOSER_FLAGS
 
 before_script:
   - nohup php -S localhost:8080 -t features/fixtures/project/web > /tmp/server.log 2>&1 &
@@ -39,6 +34,7 @@ before_script:
   - export DISPLAY=:99.0
   - java -jar bin/selenium.jar > /dev/null 2>&1 &
   - sleep 5
+  - php features/fixtures/project/app/console assets:install --symlink features/fixtures/project/web
 
 script:
   - bin/phpspec run -f pretty
