--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "fsi/admin-security-bundle",
     "type": "symfony-bundle",
     "description": "Simple authentication & authorization mechanisms for fsi/admin-bundle",
-    "keywords": ["admin", "panel", "symfony2", "bundle", "fsi", "security"],
+    "keywords": ["admin", "panel", "symfony", "bundle", "fsi", "security"],
     "license": "MIT",
     "authors": [
         {
@@ -13,20 +13,24 @@
     "require": {
         "php": ">=5.4",
         "fsi/admin-bundle" : "^2.0@dev",
-        "symfony/form": "^2.4",
-        "symfony/framework-bundle": "^2.3",
+        "symfony/form": "^2.7",
+        "symfony/framework-bundle": "^2.7",
         "symfony/security": "^2.6",
         "symfony/security-bundle": "^2.6",
-        "symfony/swiftmailer-bundle": "^2.3.3",
-        "symfony/twig-bundle": "^2.6",
-        "symfony/validator": "^2.3",
-        "doctrine/orm": "^2.4.6",
+        "symfony/swiftmailer-bundle": "^2.4",
+        "symfony/property-access": "^2.6",
+        "symfony/twig-bundle": "^2.7",
+        "symfony/validator": "^2.6",
+        "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.5",
         "paragonie/random_compat": "^1.1"
     },
     "require-dev": {
-        "symfony/expression-language": "^2.8",
-        "symfony/monolog-bundle": "^2.12",
+        "symfony/dom-crawler": "^2.5",
+        "symfony/class-loader": "^2.4",
+        "symfony/monolog-bridge": "^2.4",
+        "symfony/monolog-bundle": "^2.6",
+        "symfony/routing": "^2.7",
         "friendsofsymfony/user-bundle": "1.3.*",
         "phpspec/phpspec": "^2.5",
         "behat/behat": "^3.3",
@@ -36,8 +40,7 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-selenium2-driver": "^1.3",
         "sensiolabs/behat-page-object-extension": "^2.0",
-        "bossa/phpspec2-expect": "^1.0",
-        "symfony/class-loader": "^2.8"
+        "bossa/phpspec2-expect": "^1.0"
     },
     "config": {
         "bin-dir": "bin"
