--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0-dev"
+            "dev-master": "3.0-dev",
+            "2.0": "2.0-dev"
         }
     }
 }
