--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 cache:
   directories:
     - bin
+    - vendor
     - $HOME/.composer/cache
 
 sudo: false
@@ -19,7 +20,9 @@ matrix:
     - php: 5.6
       env:
         - SYMFONY_VERSION=2.8.*
+    - php: 5.6
     - php: 7.0
+    - php: 7.1
 
 before_install:
   - phpenv config-rm xdebug.ini
