--- a/composer.json
+++ b/composer.json
@@ -12,26 +12,28 @@
     ],
     "require": {
         "php": ">=5.4",
-        "fsi/admin-bundle" : "^2.1@dev,>=2.1.1",
-        "symfony/dependency-injection": "^2.7",
-        "symfony/form": "^2.7",
-        "symfony/framework-bundle": "^2.7",
-        "symfony/security": "^2.6",
-        "symfony/security-bundle": "^2.6",
-        "symfony/swiftmailer-bundle": "^2.4",
-        "symfony/property-access": "^2.6",
-        "symfony/twig-bundle": "^2.7",
-        "symfony/validator": "^2.6",
+        "fsi/admin-bundle" : "^3.0@dev",
+        "fsi/datasource-bundle": "^1.3@dev",
+        "fsi/datasource": "^1.3@dev",
+        "symfony/dependency-injection": "^2.7|^3.0",
+        "symfony/form": "^2.7|^3.0",
+        "symfony/framework-bundle": "^2.7|^3.0",
+        "symfony/security": "^2.6|^3.0",
+        "symfony/security-bundle": "^2.6|^3.0",
+        "symfony/swiftmailer-bundle": "^2.4|^3.0",
+        "symfony/property-access": "^2.6|^3.0",
+        "symfony/twig-bundle": "^2.7|^3.0",
+        "symfony/validator": "^2.6|^3.0",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.5",
         "paragonie/random_compat": "^1.1"
     },
     "require-dev": {
-        "symfony/dom-crawler": "^2.5",
-        "symfony/class-loader": "^2.4",
-        "symfony/monolog-bridge": "^2.4",
-        "symfony/monolog-bundle": "^2.6",
-        "symfony/routing": "^2.7",
+        "symfony/dom-crawler": "^2.5|^3.0",
+        "symfony/class-loader": "^2.4|^3.0",
+        "symfony/monolog-bridge": "^2.4|^3.0",
+        "symfony/monolog-bundle": "^2.6|^3.0",
+        "symfony/routing": "^2.7|^3.0",
         "phpspec/phpspec": "^2.5",
         "behat/behat": "^3.3",
         "behat/symfony2-extension": "^2.1",
