--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": ">=7.1",
         "fsi/admin-bundle" : "^3.0@dev",
         "symfony/dependency-injection": "^2.7|^3.0",
         "symfony/form": "^2.7|^3.0",
@@ -32,7 +32,7 @@
         "symfony/monolog-bridge": "^2.4|^3.0",
         "symfony/monolog-bundle": "^2.6|^3.0",
         "symfony/routing": "^2.7|^3.0",
-        "phpspec/phpspec": "^2.5|^3.0",
+        "phpspec/phpspec": "^3.0",
         "behat/behat": "^3.3",
         "behat/symfony2-extension": "^2.1",
         "behat/mink": "^1.7",
@@ -40,7 +40,8 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-selenium2-driver": "^1.3",
         "sensiolabs/behat-page-object-extension": "^2.0",
-        "bossa/phpspec2-expect": "^1.0|^2.3"
+        "bossa/phpspec2-expect": "^2.3",
+        "fsi/datasource-bundle": "^2.0@dev"
     },
     "config": {
         "bin-dir": "bin"
