--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/monolog-bundle": "^2.6|^3.0",
         "symfony/routing": "^2.7|^3.0",
         "phpspec/phpspec": "^3.0",
+        "phpspec/prophecy": "^1.7.2",
         "behat/behat": "^3.3",
         "behat/symfony2-extension": "^2.1",
         "behat/mink": "^1.7",
@@ -41,6 +42,7 @@
         "behat/mink-selenium2-driver": "^1.3",
         "sensiolabs/behat-page-object-extension": "^2.0",
         "bossa/phpspec2-expect": "^2.3",
+        "fsi/datasource": "^2.0@dev",
         "fsi/datasource-bundle": "^2.0@dev"
     },
     "config": {
