Test new scrutinizer engine

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,4 +1,12 @@
 ---
+build:
+    nodes:
+        analysis:
+            project_setup:
+                override: true
+            tests:
+                override: [php-scrutinizer-run]
+
 filter:
     excluded_paths: [vendor/*, app/*, web/*, Behat/*, spec/*, features/*]
 
