--- a/features/fixtures/project/app/config/security.yml
+++ b/features/fixtures/project/app/config/security.yml
@@ -9,7 +9,7 @@ security:
                 property: username
 
     role_hierarchy:
-        ROLE_ADMIN: ROLE_REDACTOR
+        ROLE_ADMIN: [ROLE_REDACTOR, ROLE_ALLOWED_TO_SWITCH]
         ROLE_REDACTOR: ROLE_USER
 
     firewalls:
@@ -27,6 +27,7 @@ security:
             logout:
                 path:   fsi_admin_security_user_logout
             anonymous:    ~
+            switch_user: true
 
     access_control:
         - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
