--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=7.1",
         "fsi/admin-bundle" : "^3.0@dev",
+        "symfony/console": "^2.6|^3.0|^4.0",
         "symfony/dependency-injection": "^2.7|^3.0|^4.0",
         "symfony/form": "^2.7|^3.0|^4.0",
         "symfony/framework-bundle": "^2.7|^3.0|^4.0",
