--- a/features/fixtures/project/app/config/security.yml
+++ b/features/fixtures/project/app/config/security.yml
@@ -5,7 +5,7 @@ security:
     providers:
         entity_provider:
             entity:
-                class: FSiFixturesBundle:User
+                class: FSiFixturesBundle\Entity\User
                 property: username
 
     role_hierarchy:
@@ -26,7 +26,7 @@ security:
                 default_target_path: /admin
             logout:
                 path:   fsi_admin_security_user_logout
-            anonymous:    ~
+            anonymous: ~
             switch_user: true
 
     access_control:
