--- a/composer.json
+++ b/composer.json
@@ -58,8 +58,10 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0-dev",
-            "2.0": "2.0-dev"
+            "dev-master": "4.0-dev",
+            "3.0": "3.0-dev",
+            "2.0": "2.0-dev",
+            "1.0": "1.0-dev"
         }
     }
 }
