--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
         "bossa/phpspec2-expect": "^2.3|^3.0",
-        "phpspec/phpspec": "^3.0|^4.0",
+        "phpspec/phpspec": "^3.0|^4.0|^5.0",
         "phpspec/prophecy": "^1.7.2",
         "sensiolabs/behat-page-object-extension": "^2.0",
         "symfony/class-loader": "^2.4|^3.0",
