Removed 2.x versions of Symfony packages

--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,16 @@
     "require": {
         "php": ">=7.1",
         "fsi/admin-bundle" : "^3.0",
-        "symfony/console": "^2.6|^3.0|^4.0",
-        "symfony/dependency-injection": "^2.7|^3.0|^4.0",
-        "symfony/form": "^2.7|^3.0|^4.0",
-        "symfony/framework-bundle": "^2.7|^3.0|^4.0",
-        "symfony/property-access": "^2.6|^3.0|^4.0",
-        "symfony/security": "^2.6|^3.0|^4.0",
-        "symfony/security-bundle": "^2.6|^3.0|^4.0",
-        "symfony/swiftmailer-bundle": "^2.4|^3.0|^4.0",
-        "symfony/twig-bundle": "^2.7|^3.0|^4.0",
-        "symfony/validator": "^2.6|^3.0|^4.0",
+        "symfony/console": "^3.0|^4.0",
+        "symfony/dependency-injection": "^3.0|^4.0",
+        "symfony/form": "^3.0|^4.0",
+        "symfony/framework-bundle": "^3.0|^4.0",
+        "symfony/property-access": "^3.0|^4.0",
+        "symfony/security": "^3.0|^4.0",
+        "symfony/security-bundle": "^3.0|^4.0",
+        "symfony/swiftmailer-bundle": "^3.0|^4.0",
+        "symfony/twig-bundle": "^3.0|^4.0",
+        "symfony/validator": "^3.0|^4.0",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.5",
         "paragonie/random_compat": "^1.1"
@@ -34,16 +34,20 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
-        "bossa/phpspec2-expect": "^2.3|^3.0",
-        "phpspec/phpspec": "^3.0|^4.0",
-        "phpspec/prophecy": "^1.7.2",
+        "bossa/phpspec2-expect": "^2.0|^3.0",
+        "phpspec/phpspec": "^3.0",
+        "phpspec/prophecy": "^1.8",
+        "sebastian/comparator": "^3.0",
+        "sebastian/exporter": "^3.1",
+        "sebastian/recursion-context": "^3.0",
         "sensiolabs/behat-page-object-extension": "^2.0",
-        "symfony/class-loader": "^2.4|^3.0",
-        "symfony/dom-crawler": "^2.5|^3.0|^4.0",
-        "symfony/monolog-bridge": "^2.4|^3.0|^4.0",
-        "symfony/monolog-bundle": "^2.6|^3.0|^4.0",
-        "symfony/routing": "^2.7|^3.0|^4.0",
-        "symfony/var-dumper": "^2.7|^3.0|^4.0"
+        "symfony/class-loader": "^3.0",
+        "symfony/dom-crawler": "^3.0|^4.0",
+        "symfony/monolog-bridge": "^3.0|^4.0",
+        "symfony/monolog-bundle": "^3.0|^4.0",
+        "symfony/routing": "^3.0|^4.0",
+        "symfony/twig-bridge": "^3.0|^4.0",
+        "symfony/var-dumper": "^3.0|^4.0"
     },
     "config": {
         "bin-dir": "vendor/bin"
