--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fsi/admin-security-bundle",
     "type": "symfony-bundle",
-    "description": "Simple authentication & authorization mechanisms for fsi/admin-bundle",
+    "description": "Authentication & authorization mechanisms for fsi/admin-bundle",
     "keywords": ["admin", "panel", "symfony", "bundle", "fsi", "security"],
     "license": "MIT",
     "authors": [
@@ -13,16 +13,16 @@
     "require": {
         "php": ">=7.1",
         "fsi/admin-bundle" : "^3.0",
-        "symfony/console": "^3.0|^4.0",
-        "symfony/dependency-injection": "^3.0|^4.0",
-        "symfony/form": "^3.0|^4.0",
-        "symfony/framework-bundle": "^3.0|^4.0",
-        "symfony/property-access": "^3.0|^4.0",
-        "symfony/security": "^3.0|^4.0",
-        "symfony/security-bundle": "^3.0|^4.0",
+        "symfony/console": "^3.4|^4.2",
+        "symfony/dependency-injection": "^3.4|^4.2",
+        "symfony/form": "^3.4|^4.2",
+        "symfony/framework-bundle": "^3.4|^4.2",
+        "symfony/property-access": "^3.4|^4.2",
+        "symfony/security": "^3.4|^4.2",
+        "symfony/security-bundle": "^3.4|^4.2",
         "symfony/swiftmailer-bundle": "^3.0",
-        "symfony/twig-bundle": "^3.0|^4.0",
-        "symfony/validator": "^3.0|^4.0",
+        "symfony/twig-bundle": "^3.4|^4.2",
+        "symfony/validator": "^3.4|^4.2",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.5",
         "paragonie/random_compat": "^1.1"
@@ -36,21 +36,22 @@
         "behat/symfony2-extension": "^2.1",
         "bossa/phpspec2-expect": "^2.0|^3.0",
         "egulias/email-validator": "^2.0",
-        "phpspec/phpspec": "^3.0|^4.0",
+        "phpspec/phpspec": "^3.0|^4.2",
         "phpspec/prophecy": "^1.8",
         "sebastian/comparator": "^3.0",
         "sebastian/exporter": "^3.1",
         "sebastian/recursion-context": "^3.0",
         "sensiolabs/behat-page-object-extension": "^2.0",
-        "symfony/class-loader": "^3.0|^4.0",
-        "symfony/dom-crawler": "^3.0|^4.0",
-        "symfony/event-dispatcher": "^3.0|^4.0",
-        "symfony/http-kernel": "^3.0|^4.0",
-        "symfony/monolog-bridge": "^3.0|^4.0",
+        "symfony/class-loader": "^3.4|^4.2",
+        "symfony/debug": "^3.4|^4.2",
+        "symfony/dom-crawler": "^3.4|^4.2",
+        "symfony/event-dispatcher": "^3.4|^4.2",
+        "symfony/http-kernel": "^3.4|^4.2",
+        "symfony/monolog-bridge": "^3.4|^4.2",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/routing": "^3.0|^4.0",
-        "symfony/twig-bridge": "^3.0|^4.0",
-        "symfony/var-dumper": "^3.0|^4.0"
+        "symfony/routing": "^3.4|^4.2",
+        "symfony/twig-bridge": "^3.4|^4.2",
+        "symfony/var-dumper": "^3.4|^4.2"
     },
     "config": {
         "bin-dir": "vendor/bin"
