--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,20 @@
     ],
     "require": {
         "php": ">=7.1",
-        "fsi/admin-bundle" : "^4.0@dev",
-        "symfony/console": "^3.4|^4.2",
-        "symfony/dependency-injection": "^3.4|^4.2",
-        "symfony/form": "^3.4|^4.2",
-        "symfony/framework-bundle": "^3.4|^4.2",
-        "symfony/property-access": "^3.4|^4.2",
-        "symfony/security": "^3.4|^4.2",
-        "symfony/security-bundle": "^3.4|^4.2",
-        "symfony/swiftmailer-bundle": "^3.0",
-        "symfony/twig-bundle": "^3.4|^4.2",
-        "symfony/validator": "^3.4|^4.2",
         "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.5"
+        "doctrine/doctrine-bundle": "^1.5",
+        "fsi/admin-bundle" : "^4.0@dev",
+        "symfony/console": "^4.2",
+        "symfony/dependency-injection": "^4.2",
+        "symfony/form": "^4.2",
+        "symfony/framework-bundle": "^4.2",
+        "symfony/property-access": "^4.2",
+        "symfony/security": "^4.2",
+        "symfony/security-bundle": "^4.2",
+        "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/twig-bundle": "^4.2",
+        "symfony/validator": "^4.2",
+        "twig/twig": "^2.11"
     },
     "require-dev": {
         "behat/behat": "^3.3",
@@ -41,16 +42,15 @@
         "sebastian/exporter": "^3.1",
         "sebastian/recursion-context": "^3.0",
         "sensiolabs/behat-page-object-extension": "^2.0",
-        "symfony/class-loader": "^3.4|^4.2",
-        "symfony/debug": "^3.4|^4.2",
-        "symfony/dom-crawler": "^3.4|^4.2",
-        "symfony/event-dispatcher": "^3.4|^4.2",
-        "symfony/http-kernel": "^3.4|^4.2",
-        "symfony/monolog-bridge": "^3.4|^4.2",
-        "symfony/monolog-bundle": "^3.0",
-        "symfony/routing": "^3.4|^4.2",
-        "symfony/twig-bridge": "^3.4|^4.2",
-        "symfony/var-dumper": "^3.4|^4.2"
+        "symfony/debug": "^4.2",
+        "symfony/dom-crawler": "^4.2",
+        "symfony/event-dispatcher": "^4.2",
+        "symfony/http-kernel": "^4.2",
+        "symfony/monolog-bridge": "^4.2",
+        "symfony/monolog-bundle": "^3.4",
+        "symfony/routing": "^4.2",
+        "symfony/twig-bridge": "^4.2",
+        "symfony/var-dumper": "^4.2"
     },
     "config": {
         "bin-dir": "vendor/bin"
@@ -61,6 +61,11 @@
         }
     },
     "autoload-dev": {
+        "psr-4": {
+            "FSi\\Bundle\\AdminSecurityBundle\\Behat\\": "Behat",
+            "FSi\\FixturesBundle\\": "features/fixtures/project/src/FSi/FixturesBundle",
+            "spec\\FSi\\Bundle\\AdminSecurityBundle\\": "spec/FSi/Bundle/AdminSecurityBundle"
+        },
         "classmap": ["features/fixtures/project/app/AppKernel.php"]
     },
     "extra": {
