--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,11 @@
         }
     },
     "autoload-dev": {
-        "classmap": ["features/fixtures/project/app/AppKernel.php"]
+        "classmap": ["features/fixtures/project/app/AppKernel.php"],
+        "psr-4": {
+            "FSi\\Bundle\\AdminSecurityBundle\\Behat\\": "Behat",
+            "spec\\FSi\\Bundle\\AdminSecurityBundle\\": "spec"
+        }
     },
     "extra": {
         "branch-alias": {
