--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.1-dev",
+            "dev-master": "3.2-dev",
+            "3.1": "3.1-dev",
             "3.0": "3.0-dev",
             "2.0": "2.0-dev"
         }
