--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": "^7.1",
         "fsi/admin-bundle" : "^3.0",
         "symfony/console": "^3.4|^4.2",
         "symfony/dependency-injection": "^3.4|^4.2",
@@ -24,7 +24,8 @@
         "symfony/twig-bundle": "^3.4|^4.2",
         "symfony/validator": "^3.4|^4.2",
         "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.5"
+        "doctrine/doctrine-bundle": "^1.5|^2.0",
+        "doctrine/persistence": "^1.3"
     },
     "require-dev": {
         "behat/behat": "^3.3",
@@ -35,7 +36,7 @@
         "behat/symfony2-extension": "^2.1",
         "bossa/phpspec2-expect": "^3.0",
         "egulias/email-validator": "^2.0",
-        "phpspec/phpspec": "5.1",
+        "phpspec/phpspec": "^5.1|^6.0",
         "phpspec/prophecy": "^1.8",
         "sebastian/comparator": "^3.0",
         "sebastian/exporter": "^3.1",
