--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /vendor
 /bin
 composer.lock
-composer.phar
 features/fixtures/project/app/cache/
 features/fixtures/project/app/logs/
 features/fixtures/project/web/bundles/
 *.sqlite
+.phpcs-cache
