--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,12 @@
         "egulias/email-validator": "^2.0",
         "phpspec/phpspec": "^5.1|^6.0",
         "phpspec/prophecy": "^1.8",
+        "phpstan/phpstan": "^0.12.66",
         "sebastian/comparator": "^3.0",
         "sebastian/exporter": "^3.1",
         "sebastian/recursion-context": "^3.0",
         "sensiolabs/behat-page-object-extension": "^2.0",
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/class-loader": "^3.4|^4.2",
         "symfony/debug": "^3.4|^4.2",
         "symfony/dom-crawler": "^3.4|^4.2",
