--- a/composer.json
+++ b/composer.json
@@ -10,22 +10,28 @@
             "email": "norbert@orzechowicz.pl"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/chives/admin-bundle.git"
+        }
+    ],
     "require": {
         "php": "^7.1",
-        "fsi/admin-bundle" : "^3.0",
-        "symfony/console": "^3.4|^4.2",
-        "symfony/dependency-injection": "^3.4|^4.2",
-        "symfony/form": "^3.4|^4.2",
-        "symfony/framework-bundle": "^3.4|^4.2",
-        "symfony/property-access": "^3.4|^4.2",
-        "symfony/security": "^3.4|^4.2",
-        "symfony/security-bundle": "^3.4|^4.2",
+        "fsi/admin-bundle" : "^4.0@dev",
+        "symfony/console": "^4.4|^5.0",
+        "symfony/dependency-injection": "^4.4|^5.0",
+        "symfony/form": "^4.4|^5.0",
+        "symfony/framework-bundle": "^4.4|^5.0",
+        "symfony/property-access": "^4.4|^5.0",
+        "symfony/security": "^4.4|^5.0",
+        "symfony/security-bundle": "^4.4|^5.0",
         "symfony/swiftmailer-bundle": "^3.0",
-        "symfony/twig-bundle": "^3.4|^4.2",
-        "symfony/validator": "^3.4|^4.2",
+        "symfony/twig-bundle": "^4.4|^5.0",
+        "symfony/validator": "^4.4|^5.0",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.5|^2.0",
-        "doctrine/persistence": "^1.3"
+        "doctrine/persistence": "^1.3|^2.0"
     },
     "require-dev": {
         "behat/behat": "^3.3",
@@ -36,24 +42,20 @@
         "behat/symfony2-extension": "^2.1",
         "bossa/phpspec2-expect": "^3.0",
         "egulias/email-validator": "^2.0",
-        "phpspec/phpspec": "^5.1|^6.0",
+        "phpspec/phpspec": "^5.1|^6.0|^7.0",
         "phpspec/prophecy": "^1.8",
         "phpstan/phpstan": "^0.12.66",
-        "sebastian/comparator": "^3.0",
-        "sebastian/exporter": "^3.1",
-        "sebastian/recursion-context": "^3.0",
         "sensiolabs/behat-page-object-extension": "^2.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/class-loader": "^3.4|^4.2",
-        "symfony/debug": "^3.4|^4.2",
-        "symfony/dom-crawler": "^3.4|^4.2",
-        "symfony/event-dispatcher": "^3.4|^4.2",
-        "symfony/http-kernel": "^3.4|^4.2",
-        "symfony/monolog-bridge": "^3.4|^4.2",
+        "symfony/debug": "^4.4|^5.0",
+        "symfony/dom-crawler": "^4.4|^5.0",
+        "symfony/event-dispatcher": "^4.4|^5.0",
+        "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/monolog-bridge": "^4.4|^5.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/routing": "^3.4|^4.2",
-        "symfony/twig-bridge": "^3.4|^4.2",
-        "symfony/var-dumper": "^3.4|^4.2"
+        "symfony/routing": "^4.4|^5.0",
+        "symfony/twig-bridge": "^4.4|^5.0",
+        "symfony/var-dumper": "^4.4|^5.0"
     },
     "config": {
         "bin-dir": "vendor/bin"
