Fixed dependency from friendsofphp/proxy-manager instead of ocramius/proxy-manager

--- a/behat.yml
+++ b/behat.yml
@@ -44,6 +44,8 @@ default: &default
                 debug: true
                 path: features/fixtures/project/app/AppKernel.php
                 bootstrap: features/fixtures/project/app/bootstrap.php
+        Caciobanu\Behat\DeprecationExtension:
+            mode: weak
         SensioLabs\Behat\PageObjectExtension:
             namespaces:
                 page: FSi\Bundle\AdminSecurityBundle\Behat\Context\Page
