--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
         "doctrine/doctrine-cache-bundle": "^1.4.0",
         "doctrine/doctrine-bundle": "^1.8|^2.0",
         "doctrine/orm": "^2.7",
-        "doctrine/persistence": "^1.3|^2.0",
+        "doctrine/persistence": "^1.3",
         "fsi/admin-bundle" : "^3.0",
-        "ocramius/proxy-manager": "^2.7",
         "symfony/console": "^4.4|^5.0",
         "symfony/dependency-injection": "^4.4|^5.0",
         "symfony/doctrine-bridge": "^4.4|^5.0",
@@ -37,7 +36,9 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
+        "caciobanu/behat-deprecation-extension": "^2.0",
         "egulias/email-validator": "^3.0",
+        "friendsofphp/proxy-manager-lts": "^1.0",
         "friends-of-phpspec/phpspec-expect": "^3.0|^4.0",
         "phpspec/phpspec": "^5.1|^6.0|^7.0",
         "phpspec/prophecy": "^1.8",
