--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "symfony/security-bundle": "^4.4|^5.0",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^4.4|^5.0",
-        "symfony/validator": "^4.4|^5.0"
+        "symfony/validator": "^4.4|^5.0",
+        "behat/symfony2-extension": "^2.1"
     },
     "require-dev": {
         "behat/behat": "^3.3",
@@ -35,7 +36,6 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
-        "behat/symfony2-extension": "^2.1",
         "caciobanu/behat-deprecation-extension": "^2.0",
         "egulias/email-validator": "^3.0",
         "friendsofphp/proxy-manager-lts": "^1.0",
@@ -47,6 +47,7 @@
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/debug": "^4.4|^5.0",
         "symfony/dom-crawler": "^4.4|^5.0",
+        "symfony/error-handler": "^4.4|^5.0",
         "symfony/event-dispatcher": "^4.4|^5.0",
         "symfony/http-kernel": "^4.4|^5.0",
         "symfony/monolog-bridge": "^4.4|^5.0",
@@ -70,8 +71,8 @@
         }
     },
     "autoload-dev": {
-        "classmap": ["features/fixtures/project/app/AppKernel.php"],
         "psr-4": {
+            "FSi\\FixturesBundle\\": "features/fixtures/project/src",
             "FSi\\Bundle\\AdminSecurityBundle\\Behat\\": "Behat",
             "spec\\FSi\\Bundle\\AdminSecurityBundle\\": "spec/FSi/Bundle/AdminSecurityBundle",
             "FSi\\Bundle\\AdminSecurityBundle\\spec\\fixtures\\": "spec/fixtures"
