--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
       env:
         - COMPOSER_FLAGS='--prefer-lowest'
     - php: 7.4
+    - php: 8.0
+    - php: 8.1
 
 before_install:
   - phpenv config-rm xdebug.ini
