--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "doctrine/doctrine-cache-bundle": "^1.4.0",
+        "php": "^7.4|^8.0",
         "doctrine/doctrine-bundle": "^1.8|^2.0",
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^2.0",
