Further component updates

--- a/composer.json
+++ b/composer.json
@@ -12,49 +12,50 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "doctrine/doctrine-bundle": "^1.8|^2.0",
-        "doctrine/orm": "^2.7",
-        "doctrine/persistence": "^2.0",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/orm": "^2.13",
+        "doctrine/persistence": "^2.5|^3.0",
         "fsi/admin-bundle" : "^4.0@dev",
-        "fsi/data" : "dev-master",
-        "symfony/console": "^4.4|^5.0",
-        "symfony/dependency-injection": "^4.4|^5.0",
-        "symfony/doctrine-bridge": "^4.4|^5.0",
-        "symfony/form": "^4.4|^5.0",
-        "symfony/framework-bundle": "^4.4|^5.0",
-        "symfony/property-access": "^4.4|^5.0",
-        "symfony/security": "^4.4|^5.0",
-        "symfony/security-bundle": "^4.4|^5.0",
-        "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/twig-bundle": "^4.4|^5.0",
-        "symfony/validator": "^4.4|^5.0",
-        "behat/symfony2-extension": "^2.1"
+        "fsi/data": "dev-master",
+        "symfony/console": "^4.4|^5.4",
+        "symfony/dependency-injection": "^4.4|^5.4",
+        "symfony/doctrine-bridge": "^4.4|^5.4",
+        "symfony/form": "^4.4|^5.4",
+        "symfony/framework-bundle": "^4.4|^5.4",
+        "symfony/property-access": "^4.4|^5.4",
+        "symfony/security": "^4.4|^5.4",
+        "symfony/security-bundle": "^4.4|^5.4",
+        "symfony/swiftmailer-bundle": "^3.5",
+        "symfony/twig-bundle": "^4.4|^5.4",
+        "symfony/validator": "^4.4|^5.4",
+        "twig/twig": "^3.4"
     },
     "require-dev": {
-        "behat/behat": "^3.3",
-        "behat/mink": "^1.7",
-        "behat/mink-browserkit-driver": "^1.3",
-        "behat/mink-extension": "^2.2",
-        "behat/mink-selenium2-driver": "^1.3",
-        "caciobanu/behat-deprecation-extension": "^2.0",
-        "egulias/email-validator": "^3.0",
+        "behat/behat": "^3.11",
+        "behat/mink": "^1.10",
+        "behat/mink-selenium2-driver": "^1.6",
+        "caciobanu/behat-deprecation-extension": "^2.1",
+        "egulias/email-validator": "^3.2",
         "friendsofphp/proxy-manager-lts": "^1.0",
-        "friends-of-phpspec/phpspec-expect": "^3.0|^4.0",
-        "phpspec/phpspec": "^5.1|^6.0|^7.0",
+        "friends-of-behat/mink-browserkit-driver": "^1.6",
+        "friends-of-behat/mink-extension": "^2.7",
+        "friends-of-behat/symfony-extension": "^2.3",
+        "friends-of-phpspec/phpspec-expect": "^4.0",
+        "phpspec/phpspec": "^7.0",
         "phpspec/prophecy": "^1.8",
-        "phpstan/phpstan": "^0.12.66",
-        "sensiolabs/behat-page-object-extension": "^2.0",
-        "squizlabs/php_codesniffer": "^3.5",
-        "symfony/debug": "^4.4|^5.0",
-        "symfony/dom-crawler": "^4.4|^5.0",
-        "symfony/error-handler": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/monolog-bridge": "^4.4|^5.0",
-        "symfony/monolog-bundle": "^3.0",
-        "symfony/routing": "^4.4|^5.0",
-        "symfony/twig-bridge": "^4.4|^5.0",
-        "symfony/var-dumper": "^4.4|^5.0"
+        "phpstan/phpstan": "^1.9",
+        "sensiolabs/behat-page-object-extension": "^2.3",
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/debug": "^4.4|^5.4",
+        "symfony/dom-crawler": "^4.4|^5.4",
+        "symfony/error-handler": "^4.4|^5.4",
+        "symfony/event-dispatcher": "^4.4|^5.4",
+        "symfony/http-kernel": "^4.4|^5.4",
+        "symfony/monolog-bridge": "^4.4|^5.4",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/routing": "^4.4|^5.4",
+        "symfony/twig-bridge": "^4.4|^5.4",
+        "symfony/var-dumper": "^4.4|^5.4"
     },
     "conflict": {
         "doctrine/doctrine-cache-bundle": "<1.4.0",
@@ -77,6 +78,12 @@
             "spec\\FSi\\Bundle\\AdminSecurityBundle\\": "spec/FSi/Bundle/AdminSecurityBundle",
             "FSi\\Bundle\\AdminSecurityBundle\\spec\\fixtures\\": "spec/fixtures"
         }
+    },
+    "scripts": {
+        "sniffer": "vendor/bin/phpcs",
+        "spec": "vendor/bin/phpspec run -f pretty",
+        "stan": "vendor/bin/phpstan analyze -c phpstan.neon",
+        "behat": "vendor/bin/behat"
     },
     "extra": {
         "branch-alias": {
