--- a/behat.yml
+++ b/behat.yml
@@ -32,13 +32,13 @@ default: &default
             base_url: 'http://admin-security-bundle-web'
             sessions:
                 default:
-                    symfony2: ~
+                    symfony: ~
                 javascript:
                     selenium2:
                         browser: firefox
                         wd_host: http://admin-security-bundle-selenium:4444/wd/hub
             javascript_session: javascript
-        Behat\Symfony2Extension:
+        FriendsOfBehat\SymfonyExtension:
             kernel:
                 env: test
                 debug: true
