--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
+        "beberlei/assert": "^3.3",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/orm": "^2.13",
         "doctrine/persistence": "^2.5|^3.0",
@@ -28,7 +29,7 @@
         "symfony/swiftmailer-bundle": "^3.5",
         "symfony/twig-bundle": "^4.4|^5.4",
         "symfony/validator": "^4.4|^5.4",
-        "twig/twig": "^3.4"
+        "twig/twig": "^3.4,>=3.4.3"
     },
     "require-dev": {
         "behat/behat": "^3.11",
@@ -39,12 +40,13 @@
         "friendsofphp/proxy-manager-lts": "^1.0",
         "friends-of-behat/mink-browserkit-driver": "^1.6",
         "friends-of-behat/mink-extension": "^2.7",
+        "friends-of-behat/page-object-extension": "^0.3.2",
         "friends-of-behat/symfony-extension": "^2.3",
         "friends-of-phpspec/phpspec-expect": "^4.0",
+        "fsi/resource-repository-bundle": "^2.1",
         "phpspec/phpspec": "^7.0",
-        "phpspec/prophecy": "^1.8",
         "phpstan/phpstan": "^1.9",
-        "sensiolabs/behat-page-object-extension": "^2.3",
+        "phpstan/phpstan-beberlei-assert": "^1.0",
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/debug": "^4.4|^5.4",
         "symfony/dom-crawler": "^4.4|^5.4",
@@ -55,7 +57,8 @@
         "symfony/monolog-bundle": "^3.8",
         "symfony/routing": "^4.4|^5.4",
         "symfony/twig-bridge": "^4.4|^5.4",
-        "symfony/var-dumper": "^4.4|^5.4"
+        "symfony/var-dumper": "^4.4|^5.4",
+        "rize/uri-template": "^0.3.5"
     },
     "conflict": {
         "doctrine/doctrine-cache-bundle": "<1.4.0",
