Adapted to new Symfony security

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "twig/twig": "^3.4,>=3.4.3"
     },
     "require-dev": {
+        "ext-pdo_sqlite": "*",
         "behat/behat": "^3.11",
         "behat/mink": "^1.10",
         "behat/mink-selenium2-driver": "^1.6",
@@ -61,9 +62,9 @@
     },
     "conflict": {
         "doctrine/doctrine-cache-bundle": "<1.4.0",
-        "fsi/datasource": "<2.1",
-        "symfony/expression-language": "<4.4",
-        "twig/twig": "<1.43"
+        "fsi/datagrid": "*",
+        "fsi/datasource": "*",
+        "symfony/expression-language": "<4.4"
     },
     "config": {
         "bin-dir": "vendor/bin"
