--- a/features/fixtures/project/config/packages/security.yaml
+++ b/features/fixtures/project/config/packages/security.yaml
@@ -1,7 +1,8 @@
 ---
 security:
-    encoders:
-        FSi\Bundle\AdminSecurityBundle\Security\User\UserInterface: sha512
+    enable_authenticator_manager: true
+    password_hashers:
+        FSi\Bundle\AdminSecurityBundle\Security\User\UserInterface: auto
 
     providers:
         entity_provider:
@@ -27,7 +28,6 @@ security:
                 default_target_path: /admin
             logout:
                 path: fsi_admin_security_user_logout
-            anonymous: ~
             switch_user: true
 
     access_control:
